<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">XKCD Lite</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="xk_browse">Browse</string>
    <string name="xk_fav">Favorites</string>
    <string name="xk_progress">Progress</string>
    <string name="title_activity_display_page">Display Page</string>
    <string name="xk_loading">Loading...</string>
    <string name="xk_reached_end">You have reached the end!</string>
    <string name="xk_already_fav">This xkcd is present in your favourites</string>
    <string name="xk_fav_added">Added to favourites!</string>
    <string name="xk_goto">Goto</string>
    <string name="xk_explanation">Explanation</string>
    <string name="xk_title_activity_explain_page">ExplainPage</string>
    <string name="xk_wait">Please wait for the page to load.</string>
    <string name="title_activity_progress_page">ProgressPage</string>
    <string name="title_activity_about_page">AboutPage</string>
    <string name="xk_about">About</string>
    <string name="xk_version">Version : 1.0 (Atacama)</string>
    <string name="xk_release">Release Date : Unreleased</string>
    <string name="title_activity_stash">Stash</string>
    <string name="xk_stash">Stash</string>
    <string name="xk_saved">Saved!</string>
    <string name="xk_save_failed">Save failed :(</string>
    <string name="xk_share_failed">Share failed :(</string>
    <string name="title_activity_fav_page">Favorites Page</string>
    <string name="xk_select_all">All</string>
    <string name="xk_select_none">None</string>
    <string name="xk_delete">Delete</string>
    <string name="title_activity_display_stashed">DisplayStashed</string>

</resources>
